--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: "3"
 
 services:
     vc_usuario-backend:
+        container_name: vc_usuario-backend
         build: .
         command: npm start
         ports:
