--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/Bruno-Felix/2020.1-Vamos_Cuidar#readme",
   "dependencies": {
     "bcrypt": "^5.0.0",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mongoose": "^5.10.6",
     "multer": "^1.4.2",
