--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
             - "8000:8000"
         volumes: 
             - .:/usr/app
+            - /usr/app/node_modules  
         links: 
             - mongo
 
