--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "jwt-redis": "^6.0.0",
     "mongoose": "^5.10.6",
     "multer": "^1.4.2",
     "nodemon": "^2.0.4"
